--- a/docs/displays/MHS4001.md
+++ b/docs/displays/MHS4001.md
@@ -1,5 +1,7 @@
 6 GPIOs are required to drive the SPI display. One additional GPIO is needed for the XPT2046 touch sensor. Including the Vcc and Gnd pins, a total of 12 connections need to be made to the MCU:
 
+## Pin Configuration
+
 Pin	  |Function            |ESP32 Pin  |Config Name|Display Pin |
 ------|--------------------|-----------|-----------|------------|
 1     |Module Power 3.3V   |3.3V       |           |3.3V
@@ -26,7 +28,7 @@ Pin	  |Function            |ESP32 Pin  |Config Name|Display Pin |
 
 SPI MISO, MOSI and SCLK are shared between the touch controller and the lcd controller.
 
-## lcd_mhs4001 config:
+## LCD Configuration
 ```ini
 raspberrypi =
     -D RPI_DISPLAY_TYPE=1
