--- a/docs/displays/MRB3511.md
+++ b/docs/displays/MRB3511.md
@@ -1,5 +1,7 @@
 14 GPIOs are required to drive the 8-bit parallel display. Another 3 GPIOs are needed for the I²C touch sensor. Including the Vcc, Gnd an Rst pins, a total of 23 connections need to be made to the MCU:
 
+## Pin Configuration
+
 Pin	  |Function            |ESP32 Pin  |Config Name|Display Pin |
 ------|--------------------|-----------|-----------|------------|
 1	  |Chip select control pin|GPIO33  |TFT_CS     |CS
