--- a/docs/displays/MRB3511.md
+++ b/docs/displays/MRB3511.md
@@ -33,7 +33,10 @@ You need to desolder the 0R resistor on the back side of the panel from the 16-b
 
 There are no pins shared between the touch controller and the lcd controller.
 
-## ${lcd.mrb3511} config:
+## LCD Configuration
+
+The `lcd_config.ini` file specifies the different properties of the display, except for the actual pin configuration:
+
 ```ini
 mrb3511 =
     -D ESP32_PARALLEL=1
@@ -47,6 +50,9 @@ mrb3511 =
 ```
 
 ## HASP build_flags
+
+Specify the LCD Configuration to use and define the 17 GPIOs in the environment build flags:
+
 ```
 build_flags =
     ${flags.esp32_flags}
