--- a/docs/displays/MHS4001.md
+++ b/docs/displays/MHS4001.md
@@ -29,6 +29,9 @@ Pin	  |Function            |ESP32 Pin  |Config Name|Display Pin |
 SPI MISO, MOSI and SCLK are shared between the touch controller and the lcd controller.
 
 ## LCD Configuration
+
+The `lcd_config.ini` file specifies the different properties of the display, except for the actual pin configuration:
+
 ```ini
 raspberrypi =
     -D RPI_DISPLAY_TYPE=1
@@ -44,6 +47,9 @@ raspberrypi =
 ```
 
 ## HASP build_flags
+
+Specify the LCD Configuration to use and define the 7 GPIOs in the environment build flags:
+
 ```
 build_flags =
     ${flags.esp32_flags}
