Update SPI bus and TFT_BCKL

--- a/docs/displays/MHS4001.md
+++ b/docs/displays/MHS4001.md
@@ -55,9 +55,10 @@ build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
-    ${pins.vspi32}
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D TFT_CS=15
     -D TFT_DC=4
     -D TFT_RST=32
+    -D TFT_BCKL=-1       ; None
     -D TOUCH_CS=22
 ```
